[project]
name = "geoacled"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connectorx>=0.4.4",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]
